--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -89,6 +89,9 @@ $bd-partnrs-4: 1130px
       width: $carbon-width
 
 +widescreen
+  .bd-partnrs
+    .container
+      max-width: 1536px
   .bd-partner
     &.bd-is-carbon
       margin-left: 3rem
