--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -296,15 +296,8 @@ html {
 }
 
 img,
-embed,
-iframe,
-object,
 video {
   height: auto;
-  max-width: 100%;
-}
-
-audio {
   max-width: 100%;
 }
 
@@ -14214,6 +14207,9 @@ svg {
 }
 
 @media screen and (min-width: 1216px) {
+  .bd-partnrs .container {
+    max-width: 1536px;
+  }
   .bd-partner.bd-is-carbon {
     margin-left: 3rem;
   }
