--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -7,13 +7,13 @@
     display: table
 
 =center($width, $height: 0)
-  position: absolute
   @if $height != 0
     left: calc(50% - (#{$width} / 2))
     top: calc(50% - (#{$height} / 2))
   @else
     left: calc(50% - (#{$width} / 2))
     top: calc(50% - (#{$width} / 2))
+  position: absolute!important
 
 =fa($size, $dimensions)
   display: inline-block
