update is-loading only +center

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -230,7 +230,7 @@ $button-static-border-color: $grey-lighter !default
     pointer-events: none
     &::after
       @extend %loader
-      +center(1em)
+      +center(1em, 0, true)
   &.is-static
     background-color: $button-static-background-color
     border-color: $button-static-border-color
