--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -2,6 +2,41 @@ svg
   max-height: 100%
   max-width: 100%
 
+.bd-notice
+  background-color: $primary
+  color: $primary-invert
+  padding: 1em
+  text-align: center
+
+.bd-notice-body
+  align-items: center
+  display: flex
+  justify-content: center
+  a,
+  strong
+    color: currentColor
+  a
+    border-bottom: 1px solid rgba($white, 0.5)
+    padding-bottom: 2px
+    &:hover
+      border-bottom-color: $white
+  span
+    margin: 0 0.25em
+    opacity: 0.5
+
++mobile
+  .bd-notice
+    font-size: 0.75rem
+  .bd-notice-body
+    flex-wrap: wrap
+    p:first-child
+      width: 100%
+
++tablet
+  .bd-notice-body
+    p:first-child
+      margin-right: 1em
+
 .bd-patreon-button
   display: inline-block
   position: relative
