--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11250,6 +11250,56 @@ svg {
   max-width: 100%;
 }
 
+.bd-notice {
+  background-color: #00d1b2;
+  color: #fff;
+  padding: 1em;
+  text-align: center;
+}
+
+.bd-notice-body {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.bd-notice-body a,
+.bd-notice-body strong {
+  color: currentColor;
+}
+
+.bd-notice-body a {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  padding-bottom: 2px;
+}
+
+.bd-notice-body a:hover {
+  border-bottom-color: white;
+}
+
+.bd-notice-body span {
+  margin: 0 0.25em;
+  opacity: 0.5;
+}
+
+@media screen and (max-width: 768px) {
+  .bd-notice {
+    font-size: 0.75rem;
+  }
+  .bd-notice-body {
+    flex-wrap: wrap;
+  }
+  .bd-notice-body p:first-child {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-notice-body p:first-child {
+    margin-right: 1em;
+  }
+}
+
 .bd-patreon-button {
   display: inline-block;
   position: relative;
