--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -128,6 +128,11 @@
     @media screen and (min-width: $fullhd)
       @content
 
+=print
+  @if $print-enabled
+    @media print
+      @content
+
 // Placeholders
 
 =unselectable
