Add size classes to field body (#2304)

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -121,17 +121,6 @@ $help-size: $size-small !default
     flex-shrink: 0
     margin-right: 1.5rem
     text-align: right
-    &.is-small
-      font-size: $size-small
-      padding-top: 0.375em
-    &.is-normal
-      padding-top: 0.375em
-    &.is-medium
-      font-size: $size-medium
-      padding-top: 0.375em
-    &.is-large
-      font-size: $size-large
-      padding-top: 0.375em
 
 .field-body
   .field .field
@@ -150,10 +139,29 @@ $help-size: $size-small !default
       &:not(:last-child)
         margin-right: 0.75rem
 
+.field-label,.field-body
+  &.is-small
+    font-size: $size-small
+    padding-top: 0.375em
+  &.is-normal
+    padding-top: 0.375em
+  &.is-medium
+    font-size: $size-medium
+    padding-top: 0.375em
+  &.is-large
+    font-size: $size-large
+    padding-top: 0.375em
+
 .control
   box-sizing: border-box
   clear: both
   font-size: $size-normal
+  .is-small &
+    font-size: $size-small
+  .is-medium &
+    font-size: $size-medium
+  .is-large &
+    font-size: $size-large
   position: relative
   text-align: left
   // Modifiers
