Hide default border of navbar-burger button when hovering

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -152,6 +152,8 @@ body
   color: $navbar-burger-color
   +hamburger($navbar-height)
   margin-left: auto
+  @at-root button#{&}:hover
+    border: none
 
 .navbar-menu
   display: none
