Change perc with px

--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -80,7 +80,7 @@ $modal-card-body-padding: 20px !default
       max-width: 1215px
     &.is-wide
       min-width: 1216px
-      max-width: 90%
+      max-width: 1407px
     &.is-full
       min-width: 100%
 
