--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -59,12 +59,12 @@ $modal-card-body-padding: 20px !default
     width: $modal-content-width
 
   +mobile
-    &.is-small, &.is-medium, &.is-large, &.is-xlarge, &.is-full
+    &.is-small, &.is-medium, &.is-large, &.is-wide, &.is-full
       max-width: 100%
   +tablet
     &.is-small
       max-width: 768px
-    &.is-medium, &.is-large, &.is-xlarge
+    &.is-medium, &.is-large, &.is-wide
       min-width: 769px
       max-width: 1023px
     &.is-full
