Add styles to override default browser styles for button in navbar-burger

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -152,8 +152,16 @@ body
   color: $navbar-burger-color
   +hamburger($navbar-height)
   margin-left: auto
-  @at-root button#{&}:hover
+  @at-root button#{&}
+    -webkit-appearance: none
+    -moz-appearance: none
     border: none
+    &:not(:hover)
+      background-color: inherit
+    &:hover
+      border: none
+    &:focus
+      outline: none
 
 .navbar-menu
   display: none
