Add .is-title-adjacent class
The .is-title-adjacent class adds a way for arbitrary elements to appear closer to a title or subtitle object in the same way that a subtitle automatically appears closer to a title.

--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -18,7 +18,8 @@ $subtitle-strong-weight: $weight-semibold !default
 $subtitle-negative-margin: -1.25rem !default
 
 .title,
-.subtitle
+.subtitle,
+.is-title-adjacent
   @extend %block
   word-break: break-word
   em,
@@ -68,3 +69,7 @@ $subtitle-negative-margin: -1.25rem !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
+
+.is-title-adjacent
+  &:not(.is-spaced)
+    margin-top: $subtitle-negative-margin
