Fix indeterminate progress styling in IE11
IE11 (and possibly Edge?) adds an extra pseudo element with their own animation styling, this change removes that animation.

--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -51,6 +51,8 @@ $progress-indeterminate-duration: 1.5s !default
       background-color: transparent
     &::-moz-progress-bar
       background-color: transparent
+    &::-ms-fill
+      animation-name: none
 
   // Sizes
   &.is-small
