--- a/docs/_includes/elements/sponsor-item.html
+++ b/docs/_includes/elements/sponsor-item.html
@@ -1,5 +1,5 @@
 {% assign sponsor = site.data.sponsors.by_id[include.sponsor_id] %}
-{% assign sponsor_path = "sponsors/" | append: include.sponsor_id %}
+{% assign sponsor_path = "amis/" | append: include.sponsor_id %}
 {% assign sponsor_alt = sponsor.name | append: " logo" %}
 
 <div class="{{ include.classname }}">
