Add router hosting

--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -20,7 +20,14 @@
   display: flex
   justify-content: center
   margin-right: 1rem
-  min-height: $carbon-height + $carbon-poweredby-height
+  // min-height: $carbon-height + $carbon-poweredby-height
+  min-height: 80px
+  text-align: center
+  &.is-text
+    color: $text-light
+    font-size: 0.75em
+    line-height: 1.25
+    min-height: 0
 
 .bd-partnrs
   background-color: $white-bis
@@ -95,4 +102,5 @@ $bd-partnrs-4: 1130px
   .bd-partner
     &.bd-is-carbon
       margin-left: 3rem
-
+  .bd-partner-sponsors
+    min-height: $carbon-height + $carbon-poweredby-height
