--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -14176,7 +14176,15 @@ svg {
   display: flex;
   justify-content: center;
   margin-right: 1rem;
-  min-height: 120px;
+  min-height: 80px;
+  text-align: center;
+}
+
+.bd-partner-sponsor.is-text {
+  color: #7a7a7a;
+  font-size: 0.75em;
+  line-height: 1.25;
+  min-height: 0;
 }
 
 .bd-partnrs {
@@ -14262,6 +14270,9 @@ svg {
   }
   .bd-partner.bd-is-carbon {
     margin-left: 3rem;
+  }
+  .bd-partner-sponsors {
+    min-height: 120px;
   }
 }
 
