Cleaning up and fixing documentation navbar page
- Fix for right drop down and drop up
    - Added "is-active" to "navbar-menu"
- Moved all common hero banners into single location
- Moved all common navbar item to single location
- Fix for overlaying menus on under navbar colors

--- a/docs/_includes/examples/navbar-color.html
+++ b/docs/_includes/examples/navbar-color.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-{{ include.color }}">
+<nav class="navbar is-{{ include.color }} bd-navbar-color-example">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
       {% if include.light %}
