--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -301,3 +301,6 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     vertical-align: middle
     img
       vertical-align: middle
+
+.bd-navbar-color-example
+  z-index: auto
