--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -254,7 +254,7 @@
     font-weight: $weight-semibold
 
 .intro-ghbtns
-  margin-bottom: 26px
+  margin-bottom: 16px
   min-height: 30px
   iframe,
   a,
@@ -398,6 +398,9 @@
     &:hover
       opacity: 1
 
+.intro-carbon
+  margin-top: 1.5rem
+
 +mobile
   .intro-buttons
     .button
@@ -433,4 +436,4 @@
   .intro-title
     margin-top: -11px
     &:not(:last-child)
-      margin-bottom: 20px
+      margin-bottom: 10px
