--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -8,18 +8,23 @@
     margin-right: 3rem
     width: 150px
 
+.bd-partnrs-list
+  margin: -3rem 0 3rem
+
 .bd-partner-sponsors
   align-items: center
   display: flex
   flex-wrap: wrap
   justify-content: space-between
   justify-content: space-around
+  margin: 0 auto
+  max-width: 50rem
 
 .bd-partner-sponsor
   align-items: center
   display: flex
   justify-content: center
-  margin-right: 1rem
+  margin: 0.25rem 1rem
   // min-height: $carbon-height + $carbon-poweredby-height
   min-height: 80px
   text-align: center
