--- a/docs/_includes/elements/sponsor-item.html
+++ b/docs/_includes/elements/sponsor-item.html
@@ -1,6 +1,9 @@
 {% assign sponsor = site.data.sponsors.by_id[include.sponsor_id] %}
 {% assign sponsor_path = "amis/" | append: include.sponsor_id %}
 {% assign sponsor_alt = sponsor.name | append: " logo" %}
+{% if sponsor.title != "" %}
+  {% assign sponsor_alt = sponsor.title %}
+{% endif %}
 
 <div class="{{ include.classname }}">
   <a
@@ -9,7 +12,7 @@
     {% unless sponsor.follow %}
     rel="nofollow"
     {% endunless %}
-    {% if sponsor.blend %}style="mix-blend-mode: multiply;"{% endif %}
+    title="{{ sponsor_alt }}"
     >
     {%
       include elements/responsive-image.html
