--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -64,6 +64,8 @@ $link-focus-border: $blue !default
 $link-active: $grey-darker !default
 $link-active-border: $grey-dark !default
 
+$style-additional-link-pseudo-classes: false !default
+
 // Typography
 
 $family-primary: $family-sans-serif !default
