Add grid basics documentation

--- a/docs/_includes/examples/navbar-color.html
+++ b/docs/_includes/examples/navbar-color.html
@@ -46,6 +46,9 @@
           <a class="navbar-item is-active" href="{{ site.url }}/documentation/components/breadcrumb/">
             Components
           </a>
+          <a class="navbar-item is-active" href="{{ site.url }}/documentation/grid/basics/">
+            Grid
+          </a>
         </div>
       </div>
     </div>
